Private messaging (user to user messaging)

--- a/Client/src/aside/Aside.css
+++ b/Client/src/aside/Aside.css
@@ -56,7 +56,7 @@ aside li h2{
 	font-size:14px;
 	color:black;
 	font-weight:normal;
-	margin-bottom:5px;
+	/* margin-bottom:5px; */
 }
 aside li h3{
 	font-size:12px;
