--- a/Client/src/ChatMessageBox/ChatMessageBox.css
+++ b/Client/src/ChatMessageBox/ChatMessageBox.css
@@ -177,6 +177,11 @@ h2,h3,h5,h6{
 	margin-top: -85px;
     margin-left: 1070px;
 }
+
+.badgeMessage{
+	margin-top: -122px;
+    margin-left: 1000px;
+}
 #usernameDialogNotifications{
 	padding:0px 25px 5px 0px;
 	color:black;
