--- a/Client/src/footer/Footer.css
+++ b/Client/src/footer/Footer.css
@@ -7,4 +7,15 @@
     border-radius: 5px;
     width: 900px;
 }
+
+
+.footerComponent-private{
+    background-color: white;
+    height: 77px;
+    margin-top: -15px;
+    border-radius: 5px;
+    
+}
+    
+
     
