--- a/Client/src/aside/Aside.css
+++ b/Client/src/aside/Aside.css
@@ -2,7 +2,7 @@
 aside{
 	width: 265px;
     height: 575px;
-    background-color: white;
+    background-color: whitesmoke;
     display: inline-block;
     font-size: 15px;
     vertical-align: top;
@@ -35,23 +35,13 @@ aside li{
 	padding:10px 0;
 	
 }
-aside li:hover{
-	background-color:blanchedalmond;
-	width: 100%;
-	height: 100%;
-}
 
 aside li img{
 	border-radius:50%;
 	margin-left:20px;
 	margin-right:8px;
 }
-aside li div{
-	display:inline-block;
-	vertical-align:top;
-	margin-top:12px;
-	width: 100px;
-}
+
 aside li h2{
 	font-size:14px;
 	color:black;
